update OOP notebook

--- a/Lab07/Lecture/Lecture7-OOP.ipynb
+++ b/Lab07/Lecture/Lecture7-OOP.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "da7113d0-97ec-4dfd-9a52-fc9f5a419c4d",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0d9d1b22-39cf-4831-b270-83d55a2bc5a7",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "(3, 0.04550562291013782)"
+       "(5, 0.6985404752423316)"
       ]
      },
      "execution_count": 4,
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5f3a26d6",
    "metadata": {},
    "outputs": [
@@ -198,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "656f6d76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Person at 0x10c0cca50>"
+       "<__main__.Person at 0x10b9e0ec0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "895a2ac5",
    "metadata": {},
    "outputs": [
@@ -247,17 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "58559dc2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Person at 0x10c0ccb90>"
+       "<__main__.Person at 0x10b9acb90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "b6c80df4",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2b965f38",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "734d5d7e",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "eb1d41d4",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "eace4323",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43maccount\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__balance\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43maccount\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__balance\u001b[49m\n",
       "\u001b[31mAttributeError\u001b[39m: 'BankAccount' object has no attribute '__balance'"
      ]
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "07eb2f6d-08ab-4984-b51c-4d49031d3f0e",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "4b540665",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "2a645812",
    "metadata": {},
    "outputs": [
@@ -597,14 +597,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4d260b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "2046bf5a",
    "metadata": {},
@@ -615,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a42cc533",
    "metadata": {},
    "outputs": [
@@ -652,14 +644,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff345a6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "9bc164b6",
    "metadata": {},
@@ -671,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fa5b84b8",
    "metadata": {},
    "outputs": [
@@ -688,6 +672,8 @@
     "from abc import ABC, abstractmethod\n",
     "\n",
     "# Abstract Base Class\n",
+    "# The Shape class is an abstract base class that defines a common interface for all shapes. \n",
+    "# It has an abstract method area() that must be implemented by any concrete subclass.\n",
     "class Shape(ABC):\n",
     "    @abstractmethod\n",
     "    def area(self):\n",
@@ -730,14 +716,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b866c8b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "36e9b8b2",
    "metadata": {},
@@ -749,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f6319e10",
    "metadata": {},
    "outputs": [
@@ -757,7 +735,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting pedaling...\n"
+      "Starting pedaling...\n",
+      "Starting car engine...\n"
      ]
     }
    ],
@@ -770,17 +749,16 @@
     "    def start(self):\n",
     "        return \"Starting pedaling...\"\n",
     "\n",
+    "class Car(Vehicle):\n",
+    "    def start(self):\n",
+    "        return \"Starting car engine...\"\n",
+    "\n",
     "bike = Bike()\n",
-    "print(bike.start())  # Output: Starting car engine...\n"
+    "print(bike.start())  # Output: Starting pedaling...\n",
+    "\n",
+    "car = Car()\n",
+    "print(car.start())   # Output: Starting car engine...\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6987a235",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -791,8 +769,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3039481f",
+   "metadata": {},
+   "source": [
+    "## Haversine Distance\n",
+    "\n",
+    "The Haversine distance calculates the great-circle distance between two points on Earth given their latitudes and longitudes.\n",
+    "\n",
+    "**Formula:**\n",
+    "\n",
+    "$$a = \\sin^2\\left(\\frac{\\Delta\\phi}{2}\\right) + \\cos(\\phi_1) \\cdot \\cos(\\phi_2) \\cdot \\sin^2\\left(\\frac{\\Delta\\lambda}{2}\\right)$$\n",
+    "\n",
+    "$$c = 2 \\cdot \\text{atan2}\\left(\\sqrt{a}, \\sqrt{1-a}\\right)$$\n",
+    "\n",
+    "$$d = R \\cdot c$$\n",
+    "\n",
+    "**Where:**\n",
+    "- $\\phi_1, \\phi_2$ = latitude of point 1 and point 2 (in radians)\n",
+    "- $\\Delta\\phi$ = latitude difference ($\\phi_2 - \\phi_1$)\n",
+    "- $\\Delta\\lambda$ = longitude difference ($\\lambda_2 - \\lambda_1$)\n",
+    "- $R$ = Earth's radius (6,371 km)\n",
+    "- $d$ = distance between the two points\n",
+    "- $a$ = intermediate value\n",
+    "- $c$ = angular distance in radians"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "f130cec7",
    "metadata": {},
    "outputs": [],
@@ -809,7 +814,6 @@
     "        return f\"Latitude: {self.latitude}, Longitude: {self.longitude}\"\n",
     "\n",
     "    def calculate_distance(self, other_location):\n",
-    "        import math\n",
     "        # Haversine formula to calculate distance between two points on the Earth\n",
     "        \n",
     "        radius = 6371  # Earth radius in kilometers\n",
@@ -834,15 +838,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance between State Capitol and Union: 1.71 km\n"
+      "Distance between University of Glasgow and Glasgow Cathedral: 3.61 km\n"
      ]
     }
    ],
    "source": [
     "# Creating two POIs\n",
-    "poi1 = Location(\"State Capitol\", 30.4383, -84.2807)\n",
+    "poi1 = Location(\"University of Glasgow\", 55.8724, -4.2900)\n",
     "\n",
-    "poi2 = Location(\"Union\", 30.4445, -84.2970)\n",
+    "poi2 = Location(\"Glasgow Cathedral\", 55.8630, -4.2346)\n",
     "\n",
     "# Calculating distance between them\n",
     "distance = poi1.calculate_distance(poi2)\n",
